# micro-mcp-server

./: .gitignore  DXT-INSTALLATION.md  LICENSE  README.md  get_config.py  install.py  pyproject.toml  requirements.txt  run_server.py
dxt-extension/: .gitignore  README.md  build.js  manifest.json  micro-blog-books.dxt  package-lock.json  package.json
dxt-extension/server/: index.js
micro_mcp_server/: __init__.py  __main__.py  server.py
modal/: mcp_client.py  modal_http_server.py
python-dxt-extension/: README.md  build.py  check_compatibility.py  manifest.json
python-dxt-extension/server/: main.py
