[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micro-mcp-server"
version = "0.1.0"
description = "Micro.blog Books API MCP Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
micro-mcp-server = "micro_mcp_server.__main__:main"

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []